# dolphin-re-mcp

./: .gitignore  .mcp.json.example  README.md  pyproject.toml
scripts/: smoke_step3.py  smoke_step4.py  smoke_step5.py
spike/: spike_watchpoint.py
src/dolphin_re_mcp/: __init__.py  auto_connect.py  cli.py  logging_setup.py  server.py  session.py  stop_watcher.py  symbol_map.py
src/dolphin_re_mcp/disasm/: __init__.py  ppc.py
src/dolphin_re_mcp/gdb/: __init__.py  client.py  registers.py  stop_reply.py
src/dolphin_re_mcp/memory/: __init__.py  attach.py  routing.py
src/dolphin_re_mcp/tools/: __init__.py  breakpoint_tools.py  compound_tools.py  disasm_tools.py  execution_tools.py  memory_tools.py
tests/: conftest.py  test_auto_connect.py  test_breakpoint_tools.py  test_capture_on_hit.py  test_disasm.py  test_gdb_client.py  test_memory_routing.py  test_memory_tools.py  test_registers.py  test_stop_reply.py  test_symbol_map.py
